--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   mongodb:
+    container_name: mongo_db
     image: mongo
     restart: always
     environment:
@@ -23,6 +24,7 @@ services:
       - .env
 
   redis:
+    container_name: redis
     image: redis:latest
     restart: always
     ports:
